<?xml version="1.0" encoding="UTF-8"?>
<project
  xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <!-- POM file generated with GWT webAppCreator -->
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.mdm.gxt</groupId>
  <artifactId>gxt.rep</artifactId>
  <packaging>war</packaging>
  <version>1.0-SNAPSHOT</version>
  <name>GWT Maven Archetype</name>

  <properties>
    <!-- Convenience property to set the GWT version -->
    <gwtVersion>2.6.1-rc2</gwtVersion>
    <gxtVersion>3.1.0</gxtVersion>
    <webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
  </properties>

  <dependencies>
      <!-- Mine ===================-->
      <dependency>
        <groupId>com.mdm.jv</groupId>
        <artifactId>jv.j2f</artifactId>
        <version>1.0.0-SNAPSHOT</version>
<!--         <scope>provided</scope>
 -->
      </dependency>
      <dependency>
        <groupId>com.mdm.jv</groupId>
        <artifactId>jv.userinfo</artifactId>
        <version>1.0.0-SNAPSHOT</version>
<!--         <scope>provided</scope>
 --> 
      </dependency>
      <dependency>
         <groupId>com.mdm.jpa</groupId>
         <artifactId>jpa.reporter.2</artifactId>
         <version>2.0.0-SNAPSHOT</version>
         <scope>provided</scope> 
      </dependency>
      <dependency>
         <groupId>com.mdm.gxt</groupId>
         <artifactId>gx_comps</artifactId>
         <version>1.1.0-SNAPSHOT</version>
<!--          <scope>provided</scope> --> 
      </dependency>
      <!-- ========================-->
<!-- GXT -->  
    <dependency>
	  <groupId>com.sencha.gxt</groupId>
	  <artifactId>gxt</artifactId>
	  <version>${gxtVersion}</version>
<!--          <scope>provided</scope> --> 
    </dependency>
    <dependency>
	  <groupId>com.sencha.gxt</groupId>
	  <artifactId>gxt-legacy</artifactId>
	  <version>${gxtVersion}</version>
<!--          <scope>provided</scope> --> 
    </dependency>
<!-- GWT -->    
     <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.7</version>
      <scope>test</scope>
    </dependency> 
<!--       
    <dependency>
	  <groupId>com.google.gwt</groupId>
	  <artifactId>gwt-dev</artifactId>
	  <version>${gwtVersion}</version>
    </dependency>
      <scope>runtime</scope>
    --> 
    <dependency>
      <groupId>com.google.gwt</groupId>
      <artifactId>gwt-user</artifactId>
      <version>${gwtVersion}</version>
      <scope>provided</scope>
    </dependency>
<!-- RequestFactory server -->
    <dependency>
      <groupId>com.google.gwt</groupId>
      <artifactId>gwt-servlet</artifactId>
      <version>${gwtVersion}</version>
<!--       <scope>provided</scope> -->
    </dependency>    
    <dependency>
      <groupId>com.google.web.bindery</groupId>
      <artifactId>requestfactory-server</artifactId>
      <version>${gwtVersion}</version>
<!--      <scope>provided</scope>-->
    </dependency>
     <dependency>
      <groupId>com.google.web.bindery</groupId>
      <artifactId>requestfactory-apt</artifactId>
      <version>${gwtVersion}</version>
<!--      <scope>provided</scope> --> 
    </dependency>
    
<!-- RequestFactory will use JSR 303 javax.validation if you let it -->
    <dependency>
      <groupId>org.hibernate</groupId>
      <artifactId>hibernate-validator</artifactId>
      <version>4.1.0.Final</version>
      <exclusions>
        <exclusion>
          <groupId>javax.xml.bind</groupId>
          <artifactId>jaxb-api</artifactId>
        </exclusion>
        <exclusion>
          <groupId>com.sun.xml.bind</groupId>
          <artifactId>jaxb-impl</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
<!-- Required by Hibernate validator because slf4j-log4j is
     optional in the hibernate-validator POM -->
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-log4j12</artifactId>
      <version>1.6.1</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>1.6.1</version>
    </dependency>
    
    <!-- SVN -->
    <dependency>
	<groupId>org.tmatesoft.svnkit</groupId>
	<artifactId>svnkit</artifactId>
	<version>1.7.4-v1</version>
    </dependency>
    <dependency>
	  <groupId>org.tmatesoft.svnkit</groupId>
	  <artifactId>svnkit-cli</artifactId>
	  <version>1.7.4-v1</version>
    </dependency>
    <dependency>
	  <groupId>com.trilead</groupId>
	  <artifactId>trilead-ssh2</artifactId>
	  <version>1.0.0-build215</version>
    </dependency>
    <dependency>
	  <groupId>org.antlr</groupId>
	  <artifactId>antlr-runtime</artifactId>
	  <version>3.4</version>
    </dependency>
    <dependency>
	  <groupId>net.java.dev.jna</groupId>
	  <artifactId>jna</artifactId>
	  <version>3.4.0</version>
    </dependency>
    <dependency>
	  <groupId>de.regnis.q.sequence</groupId>
	  <artifactId>sequence-library</artifactId>
	  <version>1.0.2</version>
    </dependency>
    <dependency>
	  <groupId>org.tmatesoft.sqljet</groupId>
	  <artifactId>sqljet</artifactId>
	  <version>1.1.1</version>
    </dependency>
<!--     <dependency>
      <groupId>org.tmatesoft.svnkit</groupId>
      <artifactId>svnkit-javahl16</artifactId>
      <version>1.7.13</version>
    </dependency>
     -->
    
   <!--  persistence -->
   <dependency>
  		<groupId>org.eclipse.persistence</groupId>
  		<artifactId>eclipselink</artifactId>
  		<version>2.4.2</version>
  		<scope>provided</scope>
   </dependency>
   <dependency>
  		<groupId>org.eclipse.persistence</groupId>
  		<artifactId>org.eclipse.persistence.jpa</artifactId>
  		<version>2.4.2</version>
  		<scope>provided</scope>
  	</dependency>
   <dependency>
  		<groupId>org.eclipse.persistence</groupId>
  		<artifactId>org.eclipse.persistence.oracle</artifactId>
  		<version>2.4.2</version>
  		<scope>provided</scope>
  	</dependency>

<!-- jasperreports -->     
    <dependency>
	  <groupId>net.sf.jasperreports</groupId>
	  <artifactId>jasperreports</artifactId>
<!-- 	  <version>4.5.0</version> -->
	  <version>5.6.0</version>
	  <scope>provided</scope>
    </dependency>
    <dependency>
     	<groupId>com.lowagie</groupId>
 	    <artifactId>itext</artifactId>
	    <version>2.1.7.js2</version>
<!-- 	    <version>2.1.7.js2</version> -->
    </dependency>
    <dependency>
       <groupId>org.olap4j</groupId>
       <artifactId>olap4j</artifactId>
       <version>0.9.7.309-JS-3</version>
    </dependency>
     
     
  </dependencies>

  <build>
    <!-- Generate compiled stuff in the folder used for developing mode -->
    <outputDirectory>${webappDirectory}/WEB-INF/classes</outputDirectory>
    <plugins>
    <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>2.4</version>
        <configuration>
          <source>1.6</source>
          <target>1.6</target>
        </configuration>
        <dependencies>
          <!-- Need to run the RF Validation tool. This works on both the command-line
               and in Eclipse, provided that m2e-apt is installed. -->
          <dependency>
            <groupId>com.google.web.bindery</groupId>
            <artifactId>requestfactory-apt</artifactId>
            <version>${gwtVersion}</version>
          </dependency>
        </dependencies>
       </plugin>
      <!-- GWT Maven Plugin       -->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>gwt-maven-plugin</artifactId>
         <version>2.6.1-rc2</version> 
<!--        <version>2.5.1</version>-->
        <dependencies>
          <dependency>
            <groupId>com.google.gwt</groupId>
            <artifactId>gwt-user</artifactId>
            <version>${gwtVersion}</version>
          </dependency>
          <dependency>
            <groupId>com.google.gwt</groupId>
            <artifactId>gwt-dev</artifactId>
            <version>${gwtVersion}</version>
          </dependency>
          <dependency>
            <groupId>com.google.gwt</groupId>
            <artifactId>gwt-codeserver</artifactId>
            <version>${gwtVersion}</version>
          </dependency>
        </dependencies>
        
        <executions>
          <execution>
            <phase>prepare-package</phase>
            <goals>
              <goal>compile</goal>
            </goals>
          </execution>
        </executions>
        <!-- Plugin configuration. There are many available options, see 
          gwt-maven-plugin documentation at codehaus.org -->
        <configuration>
          <gwtSdkFirstInClasspath>true</gwtSdkFirstInClasspath>
          <runTarget>startPoint.html</runTarget>
          <hostedWebapp>${webappDirectory}</hostedWebapp>
          <compileReport>true</compileReport>
          <logLevel>INFO</logLevel>
          <style>${gwt.style}</style>
          <optimizationLevel>0</optimizationLevel>
          <disableCastChecking>true</disableCastChecking>
          <disableClassMetadata>true</disableClassMetadata>
          <extraJvmArgs>-Dgwt.jjs.permutationWorkerFactory=com.google.gwt.dev.ThreadedPermutationWorkerFactory -Xmx1024M -Xms128M -XX:PermSize=64M -XX:MaxPermSize=128M</extraJvmArgs> 
          <compileSourcesArtifacts>
             <compileSourcesArtifact>com.mdm.gxt:gx_comps</compileSourcesArtifact>
<!--              <compileSourcesArtifact>gxt.comps:client</compileSourcesArtifact> -->
          </compileSourcesArtifacts>
        </configuration>
      </plugin>
      <!-- Copy static web files before executing gwt:run -->
            <plugin>
        <artifactId>maven-resources-plugin</artifactId>
        <version>2.4.2</version>
        <executions>
          <execution>
            <phase>compile</phase>
            <goals>
              <goal>copy-resources</goal>
            </goals>
            <configuration>
              <outputDirectory>${webappDirectory}</outputDirectory>
              <resources>
                <resource>
                  <directory>src/main/webapp</directory>
                </resource>
              </resources>
            </configuration>
          </execution>
        </executions>
      </plugin>

    </plugins>
  </build>

</project>
